# RowFluxAI

./: .env.example  README.md  example.py  example_anthropic.py  example_openai.py  pyproject.toml  ruff.toml
llm_pipeline/: __init__.py  config.py  models.py  pipeline.py
llm_pipeline/providers/: __init__.py  anthropic.py  base.py  openai.py  yandex.py
llm_pipeline/sinks/: __init__.py  base.py  postgres.py
llm_pipeline/sources/: __init__.py  base.py  postgres.py
llm_pipeline/strategies/: __init__.py  base.py  sequential.py
llm_pipeline/utils/: __init__.py  logging.py  progress.py  retry.py
llm_pipeline/validation/: __init__.py  response_validator.py  sql_validator.py
prompts/: add_conclusions.txt  convert_task_to_json.txt  sql_validation.txt
